--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <UL>
-    <LI><a href="/cjp.html">cjp.html</a></LI>
-    <LI><a href="/ep1.html">ep1.html</a></LI>
-    <LI><a href="/ep2.html">ep2.html</a></LI>
-    <LI><a href="/ep_916.html">ep_916.html</a></LI>
-    <LI><a href="/ep_amp.html">ep_amp.html</a></LI>
-    <LI><a href="/ep_ie.html">ep_ie.html</a></LI>
-    <LI><a href="/ep_iframe.html">ep_iframe.html</a></LI>
-    <LI><a href="/ep_ipad.html">ep_ipad.html</a></LI>
-    <LI><a href="/ep_v3.html">ep_v3.html</a></LI>
-    <LI><a href="/ep_volumebar.html">ep_volumebar.html</a></LI>
-    <LI><a href="/epv4.html">epv4.html</a></LI>
-    <LI><a href="/epv5.html">epv5.html</a></LI>
-    <LI><a href="/error.html">error.html</a></LI>
-    <LI><a href="/gen.sh">gen.sh</a></LI>
-    <LI><a href="/h5.html">h5.html</a></LI>
-    <LI><a href="/iframe.html">iframe.html</a></LI>
-    <LI><a href="/index.html">index.html</a></LI>
-    <LI><a href="/jg.html">jg.html</a></LI>
-    <LI><a href="/joongang_iframe_page.html">joongang_iframe_page.html</a></LI>
-    <LI><a href="/jquerytest1.html">jquerytest1.html</a></LI>
-    <LI><a href="/no12.html">no12.html</a></LI>
-    <LI><a href="/one.html">one.html</a></LI>
-    <LI><a href="/playlist.html">playlist.html</a></LI>
-    <LI><a href="/simple.html">simple.html</a></LI>
+    <LI><a href="_config.yml">_config.yml</a></LI>
+    <LI><a href="cjp.html">cjp.html</a></LI>
+    <LI><a href="ep1.html">ep1.html</a></LI>
+    <LI><a href="ep2.html">ep2.html</a></LI>
+    <LI><a href="ep_916.html">ep_916.html</a></LI>
+    <LI><a href="ep_amp.html">ep_amp.html</a></LI>
+    <LI><a href="ep_ie.html">ep_ie.html</a></LI>
+    <LI><a href="ep_iframe.html">ep_iframe.html</a></LI>
+    <LI><a href="ep_ipad.html">ep_ipad.html</a></LI>
+    <LI><a href="ep_v3.html">ep_v3.html</a></LI>
+    <LI><a href="ep_volumebar.html">ep_volumebar.html</a></LI>
+    <LI><a href="epv4.html">epv4.html</a></LI>
+    <LI><a href="epv5.html">epv5.html</a></LI>
+    <LI><a href="error.html">error.html</a></LI>
+    <LI><a href="gen.sh">gen.sh</a></LI>
+    <LI><a href="h5.html">h5.html</a></LI>
+    <LI><a href="iframe.html">iframe.html</a></LI>
+    <LI><a href="index.html">index.html</a></LI>
+    <LI><a href="jg.html">jg.html</a></LI>
+    <LI><a href="joongang_iframe_page.html">joongang_iframe_page.html</a></LI>
+    <LI><a href="jquerytest1.html">jquerytest1.html</a></LI>
+    <LI><a href="no12.html">no12.html</a></LI>
+    <LI><a href="one.html">one.html</a></LI>
+    <LI><a href="playlist.html">playlist.html</a></LI>
+    <LI><a href="simple.html">simple.html</a></LI>
   </UL>
