--- a/joongang_iframe_change.html
+++ b/joongang_iframe_change.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=EDGE" />
 
  <style>
     <link rel="stylesheet" type="text/css" href="../Common/CSS/ooyala_joongang.css"/>
