--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <UL>
+    <LI><a href="CNAME">CNAME</a></LI>
     <LI><a href="_config.yml">_config.yml</a></LI>
     <LI><a href="cjp.html">cjp.html</a></LI>
     <LI><a href="ep1.html">ep1.html</a></LI>
@@ -18,6 +19,8 @@
     <LI><a href="iframe.html">iframe.html</a></LI>
     <LI><a href="index.html">index.html</a></LI>
     <LI><a href="jg.html">jg.html</a></LI>
+    <LI><a href="joongang_iframe_change.html">joongang_iframe_change.html</a></LI>
+    <LI><a href="joongang_iframe_nometa.html">joongang_iframe_nometa.html</a></LI>
     <LI><a href="joongang_iframe_page.html">joongang_iframe_page.html</a></LI>
     <LI><a href="jquerytest1.html">jquerytest1.html</a></LI>
     <LI><a href="no12.html">no12.html</a></LI>
