--- a/iframe.html
+++ b/iframe.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   
-<meta http-equiv="X-UA-Compatible" content="IE=Edge;" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script>
 	function getInternetExplorerVersion() {
 		var rv = -1;
