Changing iframe for ie 11

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <LI><a href="index.html">index.html</a></LI>
     <LI><a href="jg.html">jg.html</a></LI>
     <LI><a href="joongang_iframe_change.html">joongang_iframe_change.html</a></LI>
+    <LI><a href="joongang_iframe_ie11.html">joongang_iframe_ie11.html</a></LI>
     <LI><a href="joongang_iframe_nometa.html">joongang_iframe_nometa.html</a></LI>
     <LI><a href="joongang_iframe_page.html">joongang_iframe_page.html</a></LI>
     <LI><a href="jquerytest1.html">jquerytest1.html</a></LI>
