--- a/joongang_iframe_change.html
+++ b/joongang_iframe_change.html
@@ -9,11 +9,11 @@
  </style>
 </head>
 Iframe-VOD1<br>
-<iframe width="280px" height="160" src="http://joins1.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648a033c3f89858fce&ec=ZlM2VyYjE60L1he2pem_qdyCDHWtf6_u" frameborder="0" allowfullscreen></iframe><br>
+<iframe width="280px" height="160" src="http://joins.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648a033c3f89858fce&ec=ZlM2VyYjE60L1he2pem_qdyCDHWtf6_u" frameborder="0" allowfullscreen></iframe><br>
 Iframe-VOD2<br>
-<iframe width="280px" height="160" src="http://joins1.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648a033c3f89858fce&ec=hmOGNyYjE6BzTbo8cr11umSFitV1ui-d" frameborder="0" allowfullscreen></iframe><br>
+<iframe width="280px" height="160" src="http://joins.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648a033c3f89858fce&ec=hmOGNyYjE6BzTbo8cr11umSFitV1ui-d" frameborder="0" allowfullscreen></iframe><br>
 LIVE<br>
-<iframe width="280px" height="160" src="http://joins1.com/iframe.html?pbid=aa4c97a1795640648a033c3f89858fce&pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&ec=Y5MjVxYjE6qUX3156G0WdWWvGrw9E9pW" frameborder="0" allowfullscreen></iframe><br>
+<iframe width="280px" height="160" src="http://joins.com/iframe.html?pbid=aa4c97a1795640648a033c3f89858fce&pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&ec=Y5MjVxYjE6qUX3156G0WdWWvGrw9E9pW" frameborder="0" allowfullscreen></iframe><br>
 LIVE<br>
-<iframe width="280px" height="160" src="http://joins1.com/iframe.html?pbid=aa4c97a1795640648a033c3f89858fce&pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&ec=Y5MjVxYjE6qUX3156G0WdWWvGrw9E9pW" frameborder="0" allowfullscreen></iframe><br>
+<iframe width="280px" height="160" src="http://joins.com/iframe.html?pbid=aa4c97a1795640648a033c3f89858fce&pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&ec=Y5MjVxYjE6qUX3156G0WdWWvGrw9E9pW" frameborder="0" allowfullscreen></iframe><br>
 
