--- a/joongang_iframe_js.html
+++ b/joongang_iframe_js.html
@@ -10,12 +10,50 @@
  
 <script>
 
+function IeVersion() {
+    //Set defaults
+    var value = {
+        IsIE: false,
+        TrueVersion: 0,
+        ActingVersion: 0,
+        CompatibilityMode: false
+    };
+
+    //Try to find the Trident version number
+    var trident = navigator.userAgent.match(/Trident\/(\d+)/);
+    if (trident) {
+        value.IsIE = true;
+        //Convert from the Trident version number to the IE version number
+        value.TrueVersion = parseInt(trident[1], 10) + 4;
+    }
+
+    //Try to find the MSIE number
+    var msie = navigator.userAgent.match(/MSIE (\d+)/);
+    if (msie) {
+        value.IsIE = true;
+        //Find the IE version number from the user agent string
+        value.ActingVersion = parseInt(msie[1]);
+    } else {
+        //Must be IE 11 in "edge" mode
+        value.ActingVersion = value.TrueVersion;
+    }
+
+    //If we have both a Trident and MSIE version number, see if they're different
+    if (value.IsIE && value.TrueVersion > 0 && value.ActingVersion > 0) {
+        //In compatibility mode if the trident number doesn't match up with the MSIE number
+        value.CompatibilityMode = value.TrueVersion != value.ActingVersion;
+    }
+    return value;
+}
+
+var ie = IeVersion();
+
 function myFunction() {
     var x = document.createElement("IFRAME");
-    x.setAttribute("src", "http://joins.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648    a033c3f89858fce&ec=ZlM2VyYjE60L1he2pem_qdyCDHWtf6_u");
+    x.setAttribute("src", "http://joins.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648a033c3f89858fce&ec=ZlM2VyYjE60L1he2pem_qdyCDHWtf6_u&ieversion="+ie.TrueVersion);
     document.body.appendChild(x);
     var x1 = document.createElement("IFRAME");
-    x1.setAttribute("src", "http://joins.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648a033c3f89858fce&ec=hmOGNyYjE6BzTbo8cr11umSFitV1ui-d");
+    x1.setAttribute("src", "http://joins.com/iframe.html?pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&pbid=aa4c97a1795640648a033c3f89858fce&ec=hmOGNyYjE6BzTbo8cr11umSFitV1ui-d&ieversion="+ie.TrueVersion);
     document.body.appendChild(x1);
     var x2 = document.createElement("IFRAME");
     x2.setAttribute("src", "http://joins.com/iframe.html?pbid=aa4c97a1795640648a033c3f89858fce&pcode=UzM2oyOhgtCq_z4DZDUqQadISueB&ec=Y5MjVxYjE6qUX3156G0WdWWvGrw9E9pW");
