Changing iframe for ie 11

--- a/joongang_iframe_js.html
+++ b/joongang_iframe_js.html
@@ -47,6 +47,10 @@ function IeVersion() {
 }
 
 var ie = IeVersion();
+document.write("IsIE: " + ie.IsIE + "</br>");
+document.write("TrueVersion: " + ie.TrueVersion + "</br>");
+document.write("ActingVersion: " + ie.ActingVersion + "</br>");
+document.write("CompatibilityMode: " + ie.CompatibilityMode + "</br>");
 
 function myFunction() {
     var x = document.createElement("IFRAME");
