Changing iframe for ie 11

--- a/iframe2.html
+++ b/iframe2.html
@@ -58,10 +58,10 @@
         (function () {
 
             var ie = IeVersion();
-            document.write("IsIE: " + ie.IsIE + "</br>");
-            document.write("TrueVersion: " + ie.TrueVersion + "</br>");
-            document.write("ActingVersion: " + ie.ActingVersion + "</br>");
-            document.write("CompatibilityMode: " + ie.CompatibilityMode + "</br>");
+            //document.write("IsIE: " + ie.IsIE + "</br>");
+            //document.write("TrueVersion: " + ie.TrueVersion + "</br>");
+            //document.write("ActingVersion: " + ie.ActingVersion + "</br>");
+            //document.write("CompatibilityMode: " + ie.CompatibilityMode + "</br>");
             var queryParams = window.location.href;
             var pbid = 'aa4c97a1795640648a033c3f89858fce';
             var pbidv3 = '7eaddbdc2604f3d87c4a794c8260910';
