Changing iframe for ie 11

--- a/cjp1.html
+++ b/cjp1.html
@@ -7,6 +7,6 @@
  </style>
 </head>
 
-<iframe id="ifr_vod" width="300" height="200" frameborder="0" allowfullscreen="" src="iframe2.html?ec=UwZDI2YzE6JULWXWV2PhSpSrXIV8VHIw&options[autoplay]=false&options[initialVolume]=0"></iframe>
+<iframe id="ifr_vod" width="300" height="200" frameborder="0" allowfullscreen="" src="iframe2.html?ec=UwZDI2YzE6JULWXWV2PhSpSrXIV8VHIw&options[autoplay]=true&options[initialVolume]=0"></iframe>
 
 
