--- a/iframe2.html
+++ b/iframe2.html
@@ -269,7 +269,7 @@
     </style>
 </head>
 <body style="padding:0; margin:0; width:100%; height:100%; overflow:hidden">
-    <div id='container' style='width:100%; height:100%;'></div>
+    <div id='container' style='width:-webkit-fill-available; height:-webkit-fill-available;' class='.oo-player-container'></div>
 </body>
 </html>
 
